--- a/NasaSpaceApps/Base.lproj/Main.storyboard
+++ b/NasaSpaceApps/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12117" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="s1V-rv-9JV">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12084"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -54,7 +54,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
+            <point key="canvasLocation" x="1086" y="-1101"/>
         </scene>
         <!--Schedule-->
         <scene sceneID="wg7-f3-ORb">
@@ -94,7 +94,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="360"/>
+            <point key="canvasLocation" x="1086" y="-421"/>
         </scene>
         <!--Details-->
         <scene sceneID="zMN-cR-kYc">
@@ -113,7 +113,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hym-2J-VcR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="655" y="1369"/>
+            <point key="canvasLocation" x="1086" y="1107"/>
         </scene>
         <!--About Us-->
         <scene sceneID="efP-Pc-mOQ">
@@ -132,12 +132,60 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a4i-ee-WgM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-772" y="1738"/>
+            <point key="canvasLocation" x="1086" y="377"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="JOu-NH-fIT">
+            <objects>
+                <viewController storyboardIdentifier="OnboardViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="s1V-rv-9JV" customClass="ViewController" customModule="NasaSpaceApps" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YlD-zo-s6o"/>
+                        <viewControllerLayoutGuide type="bottom" id="M8y-MM-cFW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="44E-kZ-Sw7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="08u-1W-RR6" customClass="PaperOnboarding" customModule="paper_onboarding">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cus-nl-DGX">
+                                <rect key="frame" x="94" y="541" width="186" height="36"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="DoneAction:" destination="s1V-rv-9JV" eventType="touchUpInside" id="Kqu-04-lQE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="cus-nl-DGX" secondAttribute="trailing" constant="79" id="49l-4f-i4s"/>
+                            <constraint firstAttribute="trailing" secondItem="08u-1W-RR6" secondAttribute="trailing" id="JKC-HW-Y7A"/>
+                            <constraint firstItem="M8y-MM-cFW" firstAttribute="top" secondItem="cus-nl-DGX" secondAttribute="bottom" constant="90" id="NJx-Q8-sZY"/>
+                            <constraint firstItem="cus-nl-DGX" firstAttribute="leading" secondItem="44E-kZ-Sw7" secondAttribute="leadingMargin" constant="78" id="bCR-KP-8xI"/>
+                            <constraint firstItem="M8y-MM-cFW" firstAttribute="top" secondItem="08u-1W-RR6" secondAttribute="bottom" id="bEG-6y-hE9"/>
+                            <constraint firstItem="08u-1W-RR6" firstAttribute="top" secondItem="44E-kZ-Sw7" secondAttribute="top" id="pRX-ji-N07"/>
+                            <constraint firstItem="08u-1W-RR6" firstAttribute="leading" secondItem="44E-kZ-Sw7" secondAttribute="leading" id="ve4-Cs-9O5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="DoneButton" destination="cus-nl-DGX" id="a63-ci-S3w"/>
+                        <outlet property="onboarding" destination="08u-1W-RR6" id="7jw-BS-w4x"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cs5-nX-TNz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1682.4000000000001" y="12.143928035982009"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="49e-Tb-3d3" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -153,7 +201,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-713" y="4"/>
         </scene>
     </scenes>
     <resources>
