--- a/NasaSpaceApps/Base.lproj/Main.storyboard
+++ b/NasaSpaceApps/Base.lproj/Main.storyboard
@@ -10,6 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="SF-UI-Display-Medium.otf">
+            <string>SFUIDisplay-Medium</string>
+        </array>
         <array key="SF-UI-Display-Regular.otf">
             <string>SFUIDisplay-Regular</string>
         </array>
@@ -26,7 +29,7 @@
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5U6-OE-M4R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="332" y="-1093"/>
+            <point key="canvasLocation" x="1036" y="-1377"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="1AI-Pv-Abe">
@@ -40,17 +43,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="BZn-ei-JRk">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="BZn-ei-JRk">
                                 <rect key="frame" x="41" y="238" width="292" height="190"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.078556224699999996" green="0.078556939960000002" blue="0.078558862209999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="BZn-ei-JRk" firstAttribute="centerX" secondItem="dg6-6m-EFL" secondAttribute="centerX" id="RIo-HB-uor"/>
+                            <constraint firstItem="BZn-ei-JRk" firstAttribute="top" secondItem="QXu-Fj-eG5" secondAttribute="bottom" constant="218" id="TLf-4F-uT9"/>
+                            <constraint firstItem="BZn-ei-JRk" firstAttribute="centerY" secondItem="dg6-6m-EFL" secondAttribute="centerY" id="atz-1K-HNV"/>
+                            <constraint firstItem="BZn-ei-JRk" firstAttribute="leading" secondItem="dg6-6m-EFL" secondAttribute="leadingMargin" constant="25" id="r7a-oL-he1"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sab-xx-D4V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1125.5999999999999" y="-1096.1019490254873"/>
+            <point key="canvasLocation" x="1828" y="-1380"/>
         </scene>
         <!--Home-->
         <scene sceneID="hNz-n2-bh7">
@@ -96,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2964" y="-1101.4992503748126"/>
+            <point key="canvasLocation" x="3668" y="-1386"/>
         </scene>
         <!--Register : NASA Space Apps-->
         <scene sceneID="you-1K-qQx">
@@ -129,7 +137,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yJD-I3-fbD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3919.1999999999998" y="-1101.4992503748126"/>
+            <point key="canvasLocation" x="4623" y="-1386"/>
         </scene>
         <!--Second View Controller-->
         <scene sceneID="wg7-f3-ORb">
@@ -225,7 +233,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4936.8000000000002" y="-1101.4992503748126"/>
+            <point key="canvasLocation" x="5642" y="-1386"/>
         </scene>
         <!--Details-->
         <scene sceneID="zMN-cR-kYc">
@@ -281,7 +289,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hym-2J-VcR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1085.5999999999999" y="292.80359820089956"/>
+            <point key="canvasLocation" x="1788" y="9"/>
         </scene>
         <!--About Us-->
         <scene sceneID="efP-Pc-mOQ">
@@ -300,7 +308,114 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a4i-ee-WgM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1086" y="1071"/>
+            <point key="canvasLocation" x="1788" y="787"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="2K9-GF-EsB">
+            <objects>
+                <viewController id="aEV-jD-dzG" customClass="LoginViewController" customModule="NasaSpaceApps" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jja-h5-9VL"/>
+                        <viewControllerLayoutGuide type="bottom" id="rpj-Mu-dId"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="P0U-at-fk3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPU-BP-pGR">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SpaceApp Challenge" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DAk-W8-wdq">
+                                        <rect key="frame" x="22" y="290" width="330" height="42"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Thin" family="SF UI Display" pointSize="35"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hk0-gM-vhG">
+                                        <rect key="frame" x="22" y="334" width="330" height="33.5"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Medium" family="SF UI Display" pointSize="28"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.074509803921568626" green="0.12549019607843137" blue="0.20784313725490194" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="hk0-gM-vhG" firstAttribute="top" secondItem="DAk-W8-wdq" secondAttribute="bottom" constant="2" id="8gQ-dj-6ma"/>
+                                    <constraint firstItem="hk0-gM-vhG" firstAttribute="leading" secondItem="bPU-BP-pGR" secondAttribute="leading" constant="22" id="B8x-I7-ZU5"/>
+                                    <constraint firstAttribute="trailing" secondItem="DAk-W8-wdq" secondAttribute="trailing" constant="23" id="Rkv-gV-ilg"/>
+                                    <constraint firstAttribute="trailing" secondItem="hk0-gM-vhG" secondAttribute="trailing" constant="23" id="XfH-sR-Pm8"/>
+                                    <constraint firstItem="DAk-W8-wdq" firstAttribute="leading" secondItem="bPU-BP-pGR" secondAttribute="leading" constant="22" id="tzI-EN-gQr"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aql-Rr-iiA">
+                                <rect key="frame" x="62" y="478" width="251" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="APl-Xm-Yxm">
+                                <rect key="frame" x="62" y="528" width="251" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="p3w-e9-Cvm">
+                                <rect key="frame" x="62" y="582" width="251" height="36"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HU5-c1-Kkq">
+                                        <rect key="frame" x="0.0" y="0.0" width="115.5" height="36"/>
+                                        <color key="backgroundColor" red="0.14654166996479034" green="0.28569716215133667" blue="0.52558362483978271" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Thin" family="SF UI Display" pointSize="20"/>
+                                        <state key="normal" title="Sign Up">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Akd-9O-DAu">
+                                        <rect key="frame" x="135.5" y="0.0" width="115.5" height="36"/>
+                                        <color key="backgroundColor" red="0.14654166996479034" green="0.28569716215133667" blue="0.52558362483978271" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Thin" family="SF UI Display" pointSize="20"/>
+                                        <state key="normal" title="Dive In">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="HU5-c1-Kkq" firstAttribute="width" secondItem="Akd-9O-DAu" secondAttribute="width" id="we5-t3-Kji"/>
+                                </constraints>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="bVA-SC-OLM">
+                                <rect key="frame" x="67" y="80" width="240" height="189"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="bVA-SC-OLM" secondAttribute="height" multiplier="80:63" id="HbB-Em-zLV"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rpj-Mu-dId" firstAttribute="top" secondItem="bPU-BP-pGR" secondAttribute="bottom" id="0Tm-Sa-ZCK"/>
+                            <constraint firstItem="bVA-SC-OLM" firstAttribute="leading" secondItem="P0U-at-fk3" secondAttribute="leadingMargin" constant="51" id="6Wq-3e-Rjm"/>
+                            <constraint firstItem="bPU-BP-pGR" firstAttribute="leading" secondItem="P0U-at-fk3" secondAttribute="leading" id="9Et-Wp-Yua"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aql-Rr-iiA" secondAttribute="trailing" constant="46" id="HI5-O4-ljK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bVA-SC-OLM" secondAttribute="trailing" constant="52" id="Jm9-WA-7wd"/>
+                            <constraint firstItem="rpj-Mu-dId" firstAttribute="top" secondItem="p3w-e9-Cvm" secondAttribute="bottom" constant="49" id="MO0-It-t7m"/>
+                            <constraint firstItem="p3w-e9-Cvm" firstAttribute="leading" secondItem="P0U-at-fk3" secondAttribute="leadingMargin" constant="46" id="VUN-Cj-pgi"/>
+                            <constraint firstItem="aql-Rr-iiA" firstAttribute="leading" secondItem="P0U-at-fk3" secondAttribute="leadingMargin" constant="46" id="XiI-CG-FYO"/>
+                            <constraint firstAttribute="trailing" secondItem="bPU-BP-pGR" secondAttribute="trailing" id="bXZ-ng-WDI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="APl-Xm-Yxm" secondAttribute="trailing" constant="46" id="dcq-rt-PXf"/>
+                            <constraint firstItem="p3w-e9-Cvm" firstAttribute="top" secondItem="APl-Xm-Yxm" secondAttribute="bottom" constant="24" id="g1r-AE-vck"/>
+                            <constraint firstItem="DAk-W8-wdq" firstAttribute="top" secondItem="bVA-SC-OLM" secondAttribute="bottom" constant="21" id="gwc-9e-2m7"/>
+                            <constraint firstItem="APl-Xm-Yxm" firstAttribute="leading" secondItem="P0U-at-fk3" secondAttribute="leadingMargin" constant="46" id="maI-ns-5dh"/>
+                            <constraint firstItem="bPU-BP-pGR" firstAttribute="top" secondItem="P0U-at-fk3" secondAttribute="top" id="p8P-H3-Gme"/>
+                            <constraint firstItem="APl-Xm-Yxm" firstAttribute="top" secondItem="aql-Rr-iiA" secondAttribute="bottom" constant="20" id="t9W-wF-MXq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="p3w-e9-Cvm" secondAttribute="trailing" constant="46" id="v8Q-h1-kjt"/>
+                            <constraint firstItem="p3w-e9-Cvm" firstAttribute="width" secondItem="APl-Xm-Yxm" secondAttribute="width" id="x6t-ZQ-A3R"/>
+                            <constraint firstItem="bVA-SC-OLM" firstAttribute="top" secondItem="Jja-h5-9VL" secondAttribute="bottom" constant="60" id="y4r-i1-72i"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mSL-lx-dfO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-970.39999999999998" y="-281.10944527736132"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="JOu-NH-fIT">
@@ -348,7 +463,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cs5-nX-TNz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1682.4000000000001" y="12.143928035982009"/>
+            <point key="canvasLocation" x="-1950" y="-281"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -368,14 +483,14 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-713" y="4"/>
+            <point key="canvasLocation" x="-12" y="-281"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Iug-d0-bL2">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8jG-Xe-BVb" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dAa-YO-Es7">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="dAa-YO-Es7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -386,7 +501,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xQy-fT-IOr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2024.8" y="-1101.4992503748126"/>
+            <point key="canvasLocation" x="2730" y="-1386"/>
         </scene>
     </scenes>
     <resources>
